--- a/JorgeWeb/Views/Category/Delete.cshtml
+++ b/JorgeWeb/Views/Category/Delete.cshtml
@@ -1,26 +1,26 @@
 ﻿@model Category
 
-<form method="post" >
+<form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Crear Categoría</h2>
+            <h2 class="text-primary">Delete Categoría</h2>
             <hr />
         </div>
-       @*  <div asp-validation-summary="ModelOnly"></div> *@
+        @*  <div asp-validation-summary="ModelOnly"></div> *@
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
+            <input asp-for="Name"  disabled class="form-control" />
             <span asp-validation-for="Name" class="text-bg-danger"></span>
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
+            <input asp-for="DisplayOrder" disabled class="form-control" />
             <span asp-validation-for="DisplayOrder" class="text-bg-danger"></span>
 
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Crear</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">
@@ -30,11 +30,3 @@
         </div>
     </div>
 </form>
-@* poder hacer validacion de lado de cliente se agrega este codigo  *@
-@section Scripts
-{
-    @{
-    <partial name="_ValidationScriptsPartial" />
-
-    }
-}
