--- a/JorgeWeb/Views/_ViewImports.cshtml
+++ b/JorgeWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using JorgeBookWeb
 @using JorgeBook.Models
+@using JorgeBook.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
